# SpotifyGUIController

./: CMakeLists.txt  Makefile  README.md  authentication.sh  config.hpp  default.frag  default.vert  getcode.sh  main.cpp  output.txt  shader_utils.cpp  shader_utils.hpp  spotify_api.cpp  spotify_api.hpp  url.txt
